# gridoptim

./: AGENTS.md  CMakeLists.txt  CODEX.md  LICENSE  License.txt  MANIFEST.in  MILESTONE.md  README.md  benchmark.py  benchmark_best.json  benchmark_history.json  benchmark_logs.json  benchmark_report.md  benchmark_state.json  pyproect.toml  pyproject.toml  setup.py
.github/workflows/: benchmark.yml  build_wheels.yml  draft-release.yml  pre-release.yml  publish.yml
cpp/: gridoptim_core.cpp  gridoptimcore.cpp  tinyexpr.c  tinyexpr.h
gridoptim/: __init__.py  gridoptim.py
src/gridoptim/: __init__.py  gridoptim.py
