[build-system]
requires = [
  "setuptools>=77",
  "wheel",
  "pybind11>=2.11"
]
build-backend = "setuptools.build_meta"


[project]
name = "gridoptim"
version = "1.0.0"
description = "Fast multivariate grid search optimizer with C++ core"
readme = "README.md"
requires-python = ">=3.10"

authors = [{ name = "Akhil Shimna Kumar" }]

# Valid per PEP 621 schema
license = { file = "LICENSE" }

keywords = [
  "optimization",
  "grid search",
  "numerical optimization",
  "pybind11",
  "multivariate optimization"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Halfblood-Prince/gridoptim"
Repository = "https://github.com/Halfblood-Prince/gridoptim"


# Prevent setuptools from treating cpp/ as a package
[tool.setuptools.packages.find]
where = ["."]
include = ["gridoptim*"]
exclude = ["cpp*", "tests*"]


# ABI3: build only cp310 (will produce cp310-abi3 wheels if setup.py enables limited API)
[tool.cibuildwheel]
build = "cp310-*"
skip = "*-musllinux_*"
test-command = "python -c \"from gridoptim import GridOptim; print('ok')\""
