[build-system]
requires = [
  "setuptools>=77",
  "wheel",
  "pybind11>=2.11"
]
build-backend = "setuptools.build_meta"

[project]
name = "gridoptim"
version = "1.0.1"
description = "Fast multivariate grid search optimizer with C++ core"
readme = "README.md"
requires-python = ">=3.10"

authors = [{ name = "Akhil Shimna Kumar" }]

# SPDX-compatible proprietary marker
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]

keywords = [
  "optimization",
  "grid search",
  "numerical optimization",
  "pybind11",
  "multivariate optimization"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]

# Prevent setuptools from treating cpp/ as a package
[tool.setuptools.packages.find]
where = ["."]
include = ["gridoptim*"]
exclude = ["cpp*", "tests*"]

[tool.cibuildwheel]
# Build per-CPython-version wheels (pybind11 cannot do abi3)
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"
